--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ exceptiongroup==1.2.2
 h11==0.14.0
 humanfriendly==10.0
 idna==3.10
+loguru==0.7.2
 outcome==1.3.0.post0
 packaging==24.1
 pycparser==2.22
@@ -21,10 +22,12 @@ selenium==4.26.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
+tqdm==4.67.0
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.3
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+win32-setctime==1.1.0
 wsproto==1.2.0
